--- a/ServiceTaxiDAL/ServiceTaxiDAL.csproj
+++ b/ServiceTaxiDAL/ServiceTaxiDAL.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -72,6 +73,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Repository\DataBaseContext.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Service_TaxiDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
