--- a/ServiceTaxi/ServieTaxi.csproj
+++ b/ServiceTaxi/ServieTaxi.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Models\Point.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\ClassOfCars.cs" />
     <Compile Include="States\Gender.cs" />
