--- a/ServiceTaxiBLL/ServiceTaxiBLL.csproj
+++ b/ServiceTaxiBLL/ServiceTaxiBLL.csproj
@@ -82,8 +82,6 @@
       <Name>ServieTaxi</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ServiceTaxi\ServiceTaxiBLL\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
