--- a/ServiceTaxi/ServieTaxi.csproj
+++ b/ServiceTaxi/ServieTaxi.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\CarDrive.cs" />
+    <Compile Include="Models\Feedback.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Point.cs" />
     <Compile Include="Models\Profile.cs" />
