--- a/ServiceTaxiDAL/ServiceTaxiDAL.csproj
+++ b/ServiceTaxiDAL/ServiceTaxiDAL.csproj
@@ -64,6 +64,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ICarDriverRepository.cs" />
+    <Compile Include="Interfaces\ICarRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,6 +74,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Repository\CarRepository.cs" />
     <Compile Include="Repository\DataBaseContext.cs" />
     <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Service_TaxiDataSet.Designer.cs">
